# ChangeLog for sci-chemistry/specView
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jan 2014; Justin Lecher <jlec@gentoo.org> specView-1.0.3.ebuild:
  Fix double prefix

*specView-1.0.3 (07 Aug 2013)

  07 Aug 2013; Justin Lecher <jlec@gentoo.org> +specView-1.0.3.ebuild:
  Version Bump

  20 Jul 2013; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild:
  Last prefix bit

  19 Jul 2013; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild:
  Last prefix bit

  19 Jul 2013; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild:
  Prefix love

  16 Jun 2013; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild:
  Bump to EAPI=5 and python-single-r1.eclass

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild,
  metadata.xml:
  Fix quoting

  21 Sep 2012; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild:
  Needs webkit support in pyside

  21 Sep 2012; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild:
  Prefix offset for header dirs

  21 Sep 2012; Justin Lecher <jlec@gentoo.org> specView-1.0.2.ebuild:
  Copile py code

*specView-1.0.2 (21 Sep 2012)

  21 Sep 2012; Justin Lecher <jlec@gentoo.org> +specView-1.0.2.ebuild,
  +files/specView, +metadata.xml:
  New addition
