@@ -1,2 +1,3 @@
 DIST specView1.0.2.tar.gz 15811413 SHA256 3a8d8b9e0f15e6481d8d6ea9a1f51d06a3cd2a4295acc3dfaf9e4ee0e3b1509f SHA512 f3194148f90d9dbe706c33fefda9cb6db71e0812f83bbf94bb170170bd9d4fcd4eae6295ccc78c6544b093dfbf09512555405dfab5b0516152dce2cb25b18965 WHIRLPOOL d35dd8753565f29b36c55014b8b34f0a5c60fad9f4353d4a094b6a7d2010a9936e9e3e42d27c4d5e6076a861fe7eb424acf86c7847e0218e8877ffb4a9865411
 DIST specView1.0.3.tar.gz 15675662 SHA256 24e88651b1c544db7967d2d650d03f5cf88092a5da7c333ea16d563a32ff57f8 SHA512 2d29121b0dfff6158e9d7a6e9f666eccae655f258720a2d595a21e81241a44c0cf5347acbbca420f70464a21eabd22041a8402fb26a814dacaed9ed90b10e25c WHIRLPOOL ccba371740a8d45a26072c02dfc98d7c0de00071665f745fa19d65c6470eb4edb10fac827519bf6b12c8ff6cb7e39c541f9b7f9aff20cfb83325ca8c8dc93f20
+DIST specView1.0.3r2.tar.gz 15739439 SHA256 0c843fc690cefd347f9845c64c60289965b906d68a9181e944b5ad0831544ba1 SHA512 8795eb643837475bccb611bb3067ee9675a668079fc6c12e3470d6d0c463932afa0499836a5d4728c2c7f582a18ea4c4f7713291fa429758ccbadb432e0671a9 WHIRLPOOL 4b73f2589fb4e7cfc4cc7f4b579355abc301c9def1e644aec621ab45741aceddc1e96bb34066aeb4a7f900b026073bc488f4b015fbfcbb3d38faf3f84ef05e44
